# ducklist

./: README.md  ducklist.db  pyproject.toml
ducklist/: app.py  db.py
ducklist/frontend/: get_started.sh  package-lock.json  package.json
ducklist/frontend/src/: api.ts
ducklist/frontend/src/components/: ListSelector.vue  NewItemForm.vue  TaskList.vue
ducklist/frontend/src/router/: index.ts
ducklist/frontend/src/views/: HomePage.vue  ListPage.vue
ducklist/models/: list.py  task.py
ducklist/routers/: lists.py  tasks.py
