[tool.poetry]
name = "ducklist"
version = "0.1.0"
description = ""
authors = ["Maria <msmathew726@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.123.10"
uvicorn = "^0.38.0"
sqlmodel = "^0.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
